<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/komodo_background" />


    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="404dp"
        android:layout_centerInParent="true"
        android:background="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:hint="@string/Password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/dark_blue"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/Forgot"
                android:textAlignment="textEnd" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/Login"
                android:padding="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="33dp"
                android:backgroundTint="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:text="@string/NewUser"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_to_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/Register"
                android:textAlignment="center"
                android:textSize="18sp"

                android:textColor="@color/dark_blue"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>